# IndiChat-Ai

./: .gitignore  README.md  package.json  render.yaml
firmware/: CMakeLists.txt  sdkconfig.defaults
firmware/main/: CMakeLists.txt  audio.c  audio.h  button.c  button.h  config.c  config.h  led.c  led.h  main.c  oled.c  oled.h  ota_client.c  ota_client.h  websocket_client.c  websocket_client.h  wifi_prov.c  wifi_prov.h
server/: .env.example  README.md  db.js  geminiKeyRotator.js  index.js  keyRotator.js  llm.js  make-admin.js  migrate.js  package-lock.json  package.json  set-admin.js  stt.js  supabase.js  supabase_schema.sql  sync-users-to-supabase.js  test-email.js  tts.js  webSearch.js  ws_server.js
server/data/: db.sqlite
server/middleware/: auth.js
server/routes/: admin.js  auth-supabase.js  auth.js  chat.js  devices.js  ota.js
web/: index.html  package-lock.json  package.json  vite.config.js
web/public/: manifest.json  sw.js
web/src/: App.jsx  animations.css  api.js  main.jsx  styles.js  theme.js
web/src/components/: IndiChatLogo.jsx
web/src/pages/: Admin.jsx  AuthCallback.jsx  ChangeEmail.jsx  Chat.jsx  Dashboard.jsx  DeviceConfig.jsx  Devices.jsx  Home.jsx  Login.jsx  MagicLogin.jsx  ResetPassword.jsx
